--- a/package.json
+++ b/package.json
@@ -13,13 +13,64 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/browser": "latest",
-    "@capacitor/core": "latest",
-    "@capacitor/splash-screen": "latest"
+    "@angular/common": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "@capacitor/android": "next",
+    "@capacitor/app": "next",
+    "@capacitor/core": "next",
+    "@capacitor/haptics": "next",
+    "@capacitor/ios": "next",
+    "@capacitor/keyboard": "next",
+    "@capacitor/network": "next",
+    "@capacitor/status-bar": "next",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ngrx/component-store": "^15.4.0",
+    "ionicons": "^7.0.0",
+    "mojoauth-web-sdk": "^1.1.16",
+    "rxjs": "7.8.0",
+    "socket.io-client": "^4.6.1",
+    "tslib": "^2.3.0",
+    "@capawesome/capacitor-background-task": "^2.0.0-dev.8c05008.1680891292",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "latest",
-    "vite": "^2.9.13"
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular-eslint/builder": "^15.0.0",
+    "@angular-eslint/eslint-plugin": "^15.0.0",
+    "@angular-eslint/eslint-plugin-template": "^15.0.0",
+    "@angular-eslint/schematics": "^15.0.0",
+    "@angular-eslint/template-parser": "^15.0.0",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@angular/language-service": "^15.0.0",
+    "@capacitor/cli": "next",
+    "@ionic/angular-toolkit": "^9.0.0",
+    "@types/jasmine": "4.3.1",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsdoc": "30.7.13",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "4.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "8.10.2",
+    "typescript": "4.9.5"
   },
   "author": "",
   "license": "ISC"
